# AndroidNativePlayer

./: README.md  build.gradle
src/main/: AndroidManifest.xml
src/main/cpp/: AudioDecoder.cpp  AudioDecoder.h  AudioFilter.cpp  AudioFilter.h  CMakeLists.txt  FilePlayer.cpp  FilePlayer.h  OboePlayerJNI.cpp  PlayerJNI.cpp  SimpleNoiseMaker.cpp  SimpleNoiseMaker.h  defs.h  logging.h
src/main/cpp/filters/: so_lpf.h
src/main/cpp/resampler/: ResamplerDefinitions.h
src/main/cpp/utils/: logging.h
src/main/java/org/home/nativeplayer/: AudioPlayer.java  Fun.java  MainActivity.java  Vars.java
src/main/java/org/home/oboeplayer/: AudioPlayer.java  Fun.java  MainActivity.java  Vars.java
src/main/kotlin/org/home/oboeplayer/: AudioPlayer.kt  MainActivity.kt
src/main/kotlin/org/home/oboeplayer/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
src/main/res/color/: toggle_button_background.xml
src/main/res/layout/: activity_main.xml
src/main/res/values/: strings.xml  styles.xml  themes.xml
